Bug 32881: System preferences sub menu text is hard to read
This patch makes the font-size slightly larger and applies a background color to the selected submenu.

To test:
Go to system preferences
Click on any side menu item and check the items in the sub menu under it
Apply patch
run yarn build
Go to system preferences again and check the changes

--- a/koha-tmpl/intranet-tmpl/prog/css/src/staff-global.scss
+++ b/koha-tmpl/intranet-tmpl/prog/css/src/staff-global.scss
@@ -322,7 +322,8 @@ aside {
         padding-left: 0;
 
         ul {
-            font-size: 75%;
+            font-size: 85%;
+            background-color: #f3f4f4;
         }
 
         li {
